--- a/ProfessorApp/Views/StudentManagement.xaml
+++ b/ProfessorApp/Views/StudentManagement.xaml
@@ -2,8 +2,9 @@
 <ContentPage
     x:Class="ProfessorApp.Pages.StudentManagement"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    BackgroundColor="Black">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    Title="Student Management"
+    BackgroundColor="{DynamicResource SecondaryColor}">
 
     <Grid>
 
