--- a/ProfessorApp/Views/HomePage.xaml
+++ b/ProfessorApp/Views/HomePage.xaml
@@ -20,6 +20,7 @@
                 VerticalOptions="Start" />
 
             <Label
+                x:Name="WelcomeLabel"
                 Margin="0,20,0,10"
                 FontAttributes="Bold"
                 FontSize="24"
