added DTOs to use in professor app and also added a picker that gets all of the bank names

--- a/ProfessorApp/Views/QuizPage.xaml
+++ b/ProfessorApp/Views/QuizPage.xaml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
     x:Class="ProfessorApp.Pages.QuizPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
@@ -16,11 +17,12 @@
             TextColor="White"
             VerticalOptions="Start" />
 
-        <Button
-            BackgroundColor="Orange"
-            Clicked="OngetAttendanceClicked"
-            Text="Add Quiz Question"
-            TextColor="White" />
+        <!--  Picker for Quiz Banks  -->
+        <Picker
+            x:Name="BankPicker"
+            Title="Select a Question Bank"
+            ItemsSource="{Binding BankList}"
+            SelectedItem="{Binding SelectedBank, Mode=TwoWay}" />
 
     </VerticalStackLayout>
 </ContentPage>
