--- a/ProfessorApp/Views/CoursePage.xaml
+++ b/ProfessorApp/Views/CoursePage.xaml
@@ -36,7 +36,7 @@
                 <Button
                     Margin="0,10,0,10"
                     BackgroundColor="Green"
-                    Clicked="OnAddCourse"
+                    Clicked="GoToManagement"
                     Text="Add a new course"
                     TextColor="White" 
                     MaximumWidthRequest="400" />
