--- a/ProfessorApp/Views/CoursePage.xaml
+++ b/ProfessorApp/Views/CoursePage.xaml
@@ -25,9 +25,12 @@
                     <DataTemplate>
                         <Frame BackgroundColor="DarkOrange" CornerRadius="8" Padding="10" Margin="0,5" MaximumWidthRequest="600">
                             <StackLayout>
-                                <Label Text="{Binding CourseName}" TextColor="White" FontAttributes="Bold" />
-                                <Label Text="{Binding CourseNumber}" TextColor="White" />
-                                <Label Text="{Binding Section}" TextColor="White" />
+                                <HorizontalStackLayout Spacing="0">
+                                    <Label FontSize="20" Text="{Binding CourseNumber}" TextColor="White" FontAttributes="Bold" />
+                                    <Label FontSize="20" Text="." TextColor="White" FontAttributes="Bold" />
+                                    <Label FontSize="20" Text="{Binding Section}" TextColor="White" FontAttributes="Bold" />
+                                </HorizontalStackLayout>
+                                <Label FontSize="15" Text="{Binding CourseName}" TextColor="White"  />
                             </StackLayout>
                         </Frame>
                     </DataTemplate>
@@ -58,9 +61,10 @@
             HorizontalOptions="Center"
             IsVisible="False">
             <StackLayout Spacing="10">
-                <Entry x:Name="courseIdEntry" Placeholder="Course ID" />
-                <Entry x:Name="courseNameEntry" Placeholder="Course Name" />
-                <Entry x:Name="sectionEntry" Placeholder="Section" />
+                <Entry x:Name="courseSubjectEntry" MaxLength="4" TextChanged="SubjectTextChanged" Placeholder="Course Subject" />
+                <Entry x:Name="courseNumberEntry" MaxLength="4" TextChanged="NumberTextChanged" Placeholder="Course Number" />
+                <Entry x:Name="courseNameEntry" Placeholder="Course" />
+                <Entry x:Name="sectionEntry" TextChanged="NumberTextChanged" MaxLength="3" Placeholder="Section" />
                 <Button Text="Add Course" Clicked="AddCourse" Margin="0,10,0,0" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="White" />
                 <Button Text="Back To Courses" Clicked="GoToCourses" Margin="0,10,0,0" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="White" />
                 <Label x:Name="statusLabel" TextColor="Red" HorizontalOptions="Center" />
