--- a/ProfessorApp/Views/AttendancePage.xaml
+++ b/ProfessorApp/Views/AttendancePage.xaml
@@ -3,7 +3,7 @@
     x:Class="ProfessorApp.Pages.AttendancePage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    BackgroundColor="Black">
+    BackgroundColor="#222">
 
     <!--  Main Content  -->
     <VerticalStackLayout Padding="20" Spacing="10">
