--- a/ProfessorApp/Views/CoursePage.xaml
+++ b/ProfessorApp/Views/CoursePage.xaml
@@ -3,7 +3,7 @@
     x:Class="ProfessorApp.Pages.CoursePage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    BackgroundColor="Black">
+    BackgroundColor="#222">
 
     <Grid>
 
@@ -52,7 +52,8 @@
         <Frame 
             x:Name="AddCoursePopUp"
             Padding="10" 
-            BorderColor="{DynamicResource PrimaryColor}" 
+            BorderColor="DarkOrange" 
+            BackgroundColor="#333"
             HeightRequest="400"
             WidthRequest="500"
             MaximumWidthRequest="1200" 
@@ -61,12 +62,34 @@
             HorizontalOptions="Center"
             IsVisible="False">
             <StackLayout Spacing="10">
-                <Entry x:Name="courseSubjectEntry" MaxLength="4" TextChanged="SubjectTextChanged" Placeholder="Course Subject" />
-                <Entry x:Name="courseNumberEntry" MaxLength="4" TextChanged="NumberTextChanged" Placeholder="Course Number" />
-                <Entry x:Name="courseNameEntry" Placeholder="Course" />
-                <Entry x:Name="sectionEntry" TextChanged="NumberTextChanged" MaxLength="3" Placeholder="Section" />
-                <Button Text="Add Course" Clicked="AddCourse" Margin="0,10,0,0" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="White" />
-                <Button Text="Back To Courses" Clicked="GoToCourses" Margin="0,10,0,0" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="White" />
+                <Entry x:Name="courseSubjectEntry" 
+                       MaxLength="4" 
+                       TextChanged="SubjectTextChanged" 
+                       Placeholder="Course Subject"
+                       TextColor="White" />
+                <Entry x:Name="courseNumberEntry" 
+                       MaxLength="4" 
+                       TextChanged="NumberTextChanged" 
+                       Placeholder="Course Number"
+                       TextColor="White" />
+                <Entry x:Name="courseNameEntry" 
+                       Placeholder="Course"
+                       TextColor="White" />
+                <Entry x:Name="sectionEntry" 
+                       TextChanged="NumberTextChanged" 
+                       MaxLength="3" 
+                       Placeholder="Section"
+                       TextColor="White" />
+                <Button Text="Add Course" 
+                       Clicked="AddCourse" 
+                       Margin="0,10,0,0" 
+                       BackgroundColor="Green" 
+                       TextColor="White" />
+                <Button Text="Back To Courses" 
+                        Clicked="GoToCourses" 
+                        Margin="0,10,0,0" 
+                        BackgroundColor="Grey" 
+                        TextColor="White" />
                 <Label x:Name="statusLabel" TextColor="Red" HorizontalOptions="Center" />
             </StackLayout>
         </Frame>
