--- a/ProfessorApp/Views/LoginPage.xaml
+++ b/ProfessorApp/Views/LoginPage.xaml
@@ -3,18 +3,23 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ProfessorApp.Views.LoginPage"
              Title="Attendance Manager"
-             BackgroundColor="{DynamicResource SecondaryColor}">
+             BackgroundColor="#222">
     <StackLayout Padding="10" VerticalOptions="Center" Spacing="20">
         <Image Source="utd_logo.png" HeightRequest="120" VerticalOptions="Center" />
         
-        <Label Text="Login" FontSize="Large" TextColor="{DynamicResource PrimaryColor}" HorizontalOptions="Center" FontAttributes="Bold" Margin="0,0,0,30" />
+        <Label Text="Login" FontSize="Large" TextColor="White" HorizontalOptions="Center" FontAttributes="Bold" Margin="0,0,0,30" />
 
-        <Frame Padding="20" BorderColor="{DynamicResource PrimaryColor}" MaximumWidthRequest="600" CornerRadius="10" HasShadow="True">
+        <Frame Padding="20" 
+               BorderColor="DarkOrange" 
+               MaximumWidthRequest="600" 
+               CornerRadius="10" 
+               HasShadow="True"
+               BackgroundColor="#333">
             <StackLayout Spacing="20">
-                <Entry x:Name="identifierEntry" Placeholder="ID, Email or Username" />
-                <Entry x:Name="passwordEntry" Placeholder="Password" IsPassword="True" />
-                <Button Text="Login" Clicked="OnLoginClicked" Margin="0,10,0,0" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="White" />
-                <Button Text="Register Account" Clicked="GoToRegister" Margin="0,10,0,0" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="White" />
+                <Entry TextColor="White" x:Name="identifierEntry" Placeholder="ID, Email or Username" />
+                <Entry TextColor="White" x:Name="passwordEntry" Placeholder="Password" IsPassword="True" />
+                <Button Text="Login" MaximumWidthRequest="400" Clicked="OnLoginClicked" Margin="0,10,0,0" BackgroundColor="Green" TextColor="White" />
+                <Button Text="Register Account" MaximumWidthRequest="400" Clicked="GoToRegister" Margin="0,10,0,0" BackgroundColor="Grey" TextColor="White" />
                 <Label x:Name="statusLabel" TextColor="Red" HorizontalOptions="Center" />
             </StackLayout>
         </Frame>
