--- a/ProfessorApp/Views/CoursePage.xaml
+++ b/ProfessorApp/Views/CoursePage.xaml
@@ -19,18 +19,42 @@
                 TextColor="White"
                 VerticalOptions="Start" />
 
-            <!-- Courses List -->
-            <CollectionView x:Name="CourseCollectionView" SelectionMode="Single" SelectionChanged="OnCourseSelected" HeightRequest="400">
+            <!--  Courses List  -->
+            <CollectionView
+                x:Name="CourseCollectionView"
+                HeightRequest="400"
+                SelectionChanged="OnCourseSelected"
+                SelectionMode="Single">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <Frame BackgroundColor="DarkOrange" CornerRadius="8" Padding="10" Margin="0,5" MaximumWidthRequest="600">
+                        <Frame
+                            Margin="0,5"
+                            Padding="10"
+                            BackgroundColor="DarkOrange"
+                            CornerRadius="8"
+                            MaximumWidthRequest="600">
                             <StackLayout>
                                 <HorizontalStackLayout Spacing="0">
-                                    <Label FontSize="20" Text="{Binding CourseNumber}" TextColor="White" FontAttributes="Bold" />
-                                    <Label FontSize="20" Text="." TextColor="White" FontAttributes="Bold" />
-                                    <Label FontSize="20" Text="{Binding Section}" TextColor="White" FontAttributes="Bold" />
+                                    <Label
+                                        FontAttributes="Bold"
+                                        FontSize="20"
+                                        Text="{Binding CourseNumber}"
+                                        TextColor="White" />
+                                    <Label
+                                        FontAttributes="Bold"
+                                        FontSize="20"
+                                        Text="."
+                                        TextColor="White" />
+                                    <Label
+                                        FontAttributes="Bold"
+                                        FontSize="20"
+                                        Text="{Binding Section}"
+                                        TextColor="White" />
                                 </HorizontalStackLayout>
-                                <Label FontSize="15" Text="{Binding CourseName}" TextColor="White"  />
+                                <Label
+                                    FontSize="15"
+                                    Text="{Binding CourseName}"
+                                    TextColor="White" />
                             </StackLayout>
                         </Frame>
                     </DataTemplate>
@@ -41,33 +65,58 @@
                     Margin="0,10,0,10"
                     BackgroundColor="Green"
                     Clicked="OnAddCourse"
+                    MaximumWidthRequest="400"
                     Text="Add a new course"
-                    TextColor="White" 
-                    MaximumWidthRequest="400" />
+                    TextColor="White" />
             </StackLayout>
 
         </VerticalStackLayout>
-        
-        <!--modal for adding course-->
-        <Frame 
+
+        <!--  modal for adding course  -->
+        <Frame
             x:Name="AddCoursePopUp"
-            Padding="10" 
-            BorderColor="{DynamicResource PrimaryColor}" 
-            HeightRequest="400"
-            WidthRequest="500"
-            MaximumWidthRequest="1200" 
-            CornerRadius="10" 
+            Padding="10"
+            BorderColor="{DynamicResource PrimaryColor}"
+            CornerRadius="10"
             HasShadow="True"
+            HeightRequest="400"
             HorizontalOptions="Center"
-            IsVisible="False">
+            IsVisible="False"
+            MaximumWidthRequest="1200"
+            WidthRequest="500">
             <StackLayout Spacing="10">
-                <Entry x:Name="courseSubjectEntry" MaxLength="4" TextChanged="SubjectTextChanged" Placeholder="Course Subject" />
-                <Entry x:Name="courseNumberEntry" MaxLength="4" TextChanged="NumberTextChanged" Placeholder="Course Number" />
+                <Entry
+                    x:Name="courseSubjectEntry"
+                    MaxLength="4"
+                    Placeholder="Course Subject"
+                    TextChanged="SubjectTextChanged" />
+                <Entry
+                    x:Name="courseNumberEntry"
+                    MaxLength="4"
+                    Placeholder="Course Number"
+                    TextChanged="NumberTextChanged" />
                 <Entry x:Name="courseNameEntry" Placeholder="Course" />
-                <Entry x:Name="sectionEntry" TextChanged="NumberTextChanged" MaxLength="3" Placeholder="Section" />
-                <Button Text="Add Course" Clicked="AddCourse" Margin="0,10,0,0" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="White" />
-                <Button Text="Back To Courses" Clicked="GoToCourses" Margin="0,10,0,0" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="White" />
-                <Label x:Name="statusLabel" TextColor="Red" HorizontalOptions="Center" />
+                <Entry
+                    x:Name="sectionEntry"
+                    MaxLength="3"
+                    Placeholder="Section"
+                    TextChanged="NumberTextChanged" />
+                <Button
+                    Margin="0,10,0,0"
+                    BackgroundColor="{DynamicResource PrimaryColor}"
+                    Clicked="AddCourse"
+                    Text="Add Course"
+                    TextColor="White" />
+                <Button
+                    Margin="0,10,0,0"
+                    BackgroundColor="{DynamicResource PrimaryColor}"
+                    Clicked="GoToCourses"
+                    Text="Back To Courses"
+                    TextColor="White" />
+                <Label
+                    x:Name="statusLabel"
+                    HorizontalOptions="Center"
+                    TextColor="Red" />
             </StackLayout>
         </Frame>
     </Grid>
