--- a/ProfessorApp/Views/StudentManagement.xaml
+++ b/ProfessorApp/Views/StudentManagement.xaml
@@ -41,7 +41,7 @@
                 WidthRequest="100" />
 
             <Label
-                Margin="0,10,0,0"
+                Margin="0,0,0,0"
                 Text="Enrolled Students:"
                 TextColor="White" />
             <CollectionView
@@ -73,7 +73,7 @@
 
             <!--  Button to go to Quiz Page  -->
             <Button
-                Margin="0,0,0,15"
+                Margin="0,-75,0,15"
                 BackgroundColor="Blue"
                 Clicked="OnGoToQuizPageClicked"
                 Text="Manage Quiz"
